Attempt more complex dependencies

--- a/environment.yml
+++ b/environment.yml
@@ -4,6 +4,8 @@ channels:
   - defaults
 dependencies:
   - python=3.8
-  - sphinx=3.4  # Can't be pinned by default, see https://github.com/readthedocs/readthedocs.org/issues/3829
+  # - sphinx=3.4  # Can't be pinned by default, see https://github.com/readthedocs/readthedocs.org/issues/3829
+  - pytorch-cpu=1.7
+  - rasterio=1.2
 prefix: /home/juanlu/.mambaforge/envs/rtd_conda_test38  # This gets added by `conda env export --from-history`
 # And then it gets ignored by `conda env create --name latest --file environment.yml`
